Reuinões e tentativa de corrigir org-transclusion

--- a/Reunioes.org
+++ b/Reunioes.org
@@ -203,6 +203,20 @@ CLOSED: [2021-05-03 seg 15:04]
   + Mas há modelos que isso se expande
   + Compromete hipótese de que bolha de imóveis decorre da especulação com terra
 
+** <2021-07-01 qui> Primeeiras tentativas Netlogo  e sugestões Ivette
+
+
+
+
+** <2021-07-01 qui> Sugestoes Ítalo
+
+Ideas pós reunião com o Ítalo em relação a como incluir supermultiplicador no abm:
+- Investimento de expansão em função da sazonalidade
+- Investimento de expansão em função da expectativa do grau de utilização dada a efetivação do investimento ex ante
+- Incluir expectativa em relação ao mark-share futuro junto das estratégias da firma
+  + Firmas investem sem saber qual as decisões dos demais agentes, mas podem ter expectativa quanto a parcela de mercado que lhe é cabível dada a expectativa de ação da firma concorrente e da estratégia que ela pretende adotar
+  + Isso não significa que endogeinização da estrutura de mercado?
+
 
 * Artigos
 
