--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -953,7 +953,7 @@ Similar to textcite:girardi_long-run_2016, they do not report any relevant feedb
 #+begin_export latex
 \begin{figure}[H]
 	\centering
-	\caption{GDP and Residential investment growth rate tred (HP filter, $\lambda = 1600$)}
+	\caption{GDP and Residential investment growth rate trend (HP filter, $\lambda = 1600$)}
 	\label{fig:trend}
 	\includegraphics[width=\textwidth]{./figs/Trend.png}
 	\caption*{\textbf{Source:} Authors' Elaboration}
