--- a/Articles/VECM/ref.bib
+++ b/Articles/VECM/ref.bib
@@ -3187,7 +3187,7 @@
 	series = {Working {Paper}},
 	number = {13428},
 	address = {National Bureau of Economic Research},
-	author = {Leamer, Edward E},
+	author = {Leamer, Edward E.},
 
 	year = {2007},
 	doi = {10.3386/w13428},
@@ -4369,7 +4369,7 @@
 	number = {13428},
 	urldate = {2018-12-20},
 	institution = {National Bureau of Economic Research},
-	author = {Leamer, Edward E},
+	author = {Leamer, Edward E.},
 	year = {2007},
 	doi = {10.3386/w13428},
 	keywords = {Fichado},
